# mdium

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.opencode/prompts/: rag.md
.opencode/tools/: folder_glob.ts  folder_grep.ts  rag_search.ts
.superpowers/plans/: 2026-03-22-editor-voice-and-opencode-context.md  2026-03-22-pdf-preview-tab.md  2026-03-26-git-source-control.md  2026-03-26-image-paste.md  2026-03-28-slidev-presentation-system.md  2026-03-30-excel-macro-export-import.md  2026-03-30-open-motion-integration.md  2026-03-30-video-quality-improvement.md  2026-03-31-code-editor.md  2026-03-31-rag-agent.md  2026-03-31-video-image-management.md  (+31 more)
docs/: builtin-skills.ja.md  keyboard-shortcuts.ja.md  keyboard-shortcuts.md  medium-publish.md  zenn-workflow.ja.md  zenn-workflow.md
release_notes/: release-notes-v0.2.1.md  release-notes-v0.2.2.md  release-notes-v0.2.3.md  release-notes-v0.2.4.md  release-notes-v0.2.5.md  release-notes-v0.2.6.md  v0.2.0.md
scripts/: import-opencode-themes.mjs  vendor-md2xlsx.mjs  vendor-xlsx2md.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  http_bridge.rs  lib.rs  main.rs  markdown_parser.rs
src-tauri/src/commands/: active_xlsm.rs  ai.rs  claude_config.rs  env.rs  file.rs  fs_search.rs  git.rs  image_gen.rs  mcp.rs  medium.rs  mod.rs  pty.rs  rag.rs  slidev.rs  speech.rs  vba.rs  video.rs
src/app/: App.css  (+1 more)
(+499 files in other folders)
