[package]
name = "mdium"
version = "0.1.1"
edition = "2021"

[lib]
name = "mdium_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
dirs = "5"
junction = "1"
percent-encoding = "2"
http = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
